--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Ignore Mac DS_Store files
+.DS_Store
