Added UI for creating new questions
*Added Mybatis and postgres dependecies to the dd
*Added css and js files
*Created modular modal dialogs for creating questions
*Added Skeleton code for other possible pages

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,23 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-cdi</artifactId>
+            <version>1.0.0-beta2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>javax.servlet.jsp</groupId>-->
             <!--<artifactId>javax.servlet.jsp-api</artifactId>-->
